# ai_firewall

./: .gitignore  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release-binaries.yml
ai_firewall/: __init__.py  mcp_server.py
ai_firewall/adapters/: api.py  api_execute.py  base.py  db.py  db_execute.py  file.py  sandbox.py  shell.py
ai_firewall/approval/: cli_prompt.py  extension_bridge.py  pattern_memory.py
ai_firewall/audit/: logger.py  sinks.py  verifier.py
ai_firewall/cli/: main.py
ai_firewall/config/: default_rules.yaml  guard_toml.py  popular_packages.json
ai_firewall/core/: action.py  guard.py
ai_firewall/discovery/: mcp_detector.py
ai_firewall/engine/: behavior.py  code_analysis.py  decision.py  diff.py  git_check.py  governance.py  impact.py  inheritance.py  intent.py  package_registry.py  pii_scan.py  policy.py  rbac.py  risk.py  secret_scan.py  sql_analysis.py  url_analysis.py
ai_firewall/history/: shell_reader.py
ai_firewall/parser/: action_parser.py  shell_ast.py
ai_firewall/proxy/: mcp_proxy.py
examples/: claude-code-settings.json
scripts/: build-standalone.bat  build-standalone.sh  claude-code-pretooluse.py  guard-shell-hook.sh
tests/: conftest.py  test_api_execute.py  test_api_pipeline.py  test_audit_hmac.py  test_audit_show_json.py  test_audit_sinks.py  test_behavior.py  test_claude_code_hook.py  test_cli.py  test_code_analysis.py  test_db_execute.py  test_db_pipeline.py  test_diff.py  test_egress.py  test_extension_bridge.py  test_git_check.py  test_governance.py  test_guard_pipeline.py  test_impact.py  test_inheritance.py  test_intent.py  test_mcp_install_hook.py  test_mcp_proxy.py  test_mcp_server.py  test_package_registry.py  test_pattern_memory.py  test_phase2_pipeline.py  test_pii_scan.py  test_policy.py  test_rbac.py  test_risk.py  test_sandbox.py  test_secret_scan.py  test_shell_ast.py  test_smart_flow.py  test_sql_analysis.py  test_url_analysis.py
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/src/: approval_server.ts  auto_wire.ts  extension.ts  firewall.ts  secret_watcher.ts  webview.ts
