[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-firewall"
version = "0.1.0"
description = "Execution-level safety layer between AI agents and real systems."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12",
    "sqlglot>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
guard = "ai_firewall.cli.main:cli"

[tool.setuptools.packages.find]
include = ["ai_firewall*"]

[tool.setuptools.package-data]
"ai_firewall.config" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
