[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-execution-firewall"
version = "0.2.0"
description = "Deterministic execution-level safety layer between AI agents and real systems (shell, files, SQL, HTTP)."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Shahriyar Khan" },
]
keywords = [
    "ai",
    "agent",
    "safety",
    "firewall",
    "policy",
    "guardrails",
    "sandbox",
    "security",
    "audit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12",
    "sqlglot>=23.0",
    "bashlex>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "build>=1.0",
    "twine>=5.0",
    "mcp[cli]>=1.0",
]
mcp = [
    "mcp[cli]>=1.0",
]

[project.scripts]
guard = "ai_firewall.cli.main:cli"

[project.urls]
Homepage = "https://github.com/Shahriyar-Khan27/ai_firewall"
Repository = "https://github.com/Shahriyar-Khan27/ai_firewall"
Issues = "https://github.com/Shahriyar-Khan27/ai_firewall/issues"
Changelog = "https://github.com/Shahriyar-Khan27/ai_firewall/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["ai_firewall*"]

[tool.setuptools.package-data]
"ai_firewall.config" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
